2.13.0/todo/result_export.md

# Release Notes worksheet export

You should:

1. ensure commit categorization is correct
2. write up major features, bc-breaking changes, deprecations in detail
3. summarize the other sections

## 1. Ensure commit categorization is correct

* Please sort commits into the following categories (you should not rename the categories!), I tried to pre-sort these to ease your work, feel free to move commits around if the current categorization is not good.
* Anything that is not public facing needs to be removed.
* If anything is miscategorized/belongs to another domain, move it to `miscategorized.md`.
* Please scan through `miscategorized.md` and handle any commits that belong within your domain according to these instructions.

The categories below are as follows:

* BC breaking: All commits that are BC-breaking. These are the most important commits. If any pre-sorted commit is actually BC-breaking, do move it to this section. Each commit should contain a paragraph explaining the rational behind the change as well as an example for how to update user code [BC-Guidelines](https://docs.google.com/document/d/14OmgGBr1w6gl1VO47GGGdwrIaUNr92DFhQbY_NEk8mQ/edit#heading=h.a9htwgvvec1m).
* Deprecations: All commits introducing deprecation. Each commit should include a small example explaining what should be done to update user code.
* new_features: All commits introducing a new feature (new functions, new submodule, new supported platform etc)
* improvements: All commits providing improvements to existing feature should be here (new backend for a function, new argument, better numerical stability)
* bug fixes: All commits that fix bugs and behaviors that do not match the documentation
* performance: All commits that are added mainly for performance (we separate this from improvements above to make it easier for users to look for it)
* documentation: All commits that add/update documentation
* Developers: All commits that are not end-user facing but still impact people that compile from source, develop into pytorch, extend pytorch, etc
* not user facing: All commits that are not public end-user facing and hence should be dropped from the release notes

## 2. Major features, BC-breaking changes, deprecations

The main goal of this process is to rephrase all the commit messages below to make them **clear and easy to read** by the end user. You should follow the following instructions to do so:

* **Please clean up and format commit titles to be readable by the general PyTorch user.** Make sure you're [following the guidance here](https://docs.google.com/document/d/14OmgGBr1w6gl1VO47GGGdwrIaUNr92DFhQbY_NEk8mQ/edit)! Your resulting notes must be consistent and easy to read.
* We place a lot of emphasis on the “BC-breaking” and “deprecation” sections. Those should be where the most effort goes in. The “improvements” and “bug fixes” for Python API should be nice as well.

## 3. Summarize the other sections

For the other sections (improvements, bug fixes, performance, documentation, developers, not user facing) - use your
judgement to summarize the key PRs. You do not need to make every commit description perfect
(changed in v2.10 to simplify the process).

Once you are finished, move this very file from `todo/` to `done/` and submit a pull request.

Feel free to use https://github.com/pytorch/pytorch/releases/tag/v2.10.0 as an example.

## export
### bc breaking
### deprecation
### new features
### improvements
### bug fixes
### performance
### docs
### devs
### Untopiced
- [PyTorch][Export] Fix NaN handling in export guard codegen and input constraint checks (#180399) ([#180399](https://github.com/pytorch/pytorch/pull/180399))
- Replace isinstance(x, OpaqueBase) with is_opaque_value() ([#180530](https://github.com/pytorch/pytorch/pull/180530))
- [export] Adds additional filtering for constants  ([#181179](https://github.com/pytorch/pytorch/pull/181179))
- [PT2] Fix predispatch function serialization in torch.export save/load (#181263) ([#181263](https://github.com/pytorch/pytorch/pull/181263))
- Fix typo in constant_folding.py comment ([#181932](https://github.com/pytorch/pytorch/pull/181932))
- Fix typos in export, native, and nativert docs and headers ([#182734](https://github.com/pytorch/pytorch/pull/182734))
- [nativert] Fix NativeRT Triton HOP argument packing (#182101) ([#182101](https://github.com/pytorch/pytorch/pull/182101))
- [export] Support opaque type constants in save/load ([#181676](https://github.com/pytorch/pytorch/pull/181676))
- [scan] Introduced movedim of outputs ([#182673](https://github.com/pytorch/pytorch/pull/182673))
- Simplify Min/Max of scaled symbolic terms ([#185092](https://github.com/pytorch/pytorch/pull/185092))
- Clean up export buffer hooks on trace failures ([#184956](https://github.com/pytorch/pytorch/pull/184956))
- Fix export dynamic shapes for sparse COO inputs ([#184993](https://github.com/pytorch/pytorch/pull/184993))
### not user facing
- revisit guarding in mark dynamic APIs ([#176341](https://github.com/pytorch/pytorch/pull/176341))
- revisit guarding in mark dynamic APIs ([#176341](https://github.com/pytorch/pytorch/pull/176341))
- Fix "it's" vs "its" typos in comments ([#181988](https://github.com/pytorch/pytorch/pull/181988))
- Error on raw SymInt args in fx graph call funciton nodes, and add Graph helpers for sym shape/stride/storage_offset nodes. ([#183664](https://github.com/pytorch/pytorch/pull/183664))
- Error on raw SymInt args in fx graph call funciton nodes, and add Graph helpers to make it easier to construct correct node and materialize symints to nodes. ([#183664](https://github.com/pytorch/pytorch/pull/183664))
### security
